attempting to fix change in Reflection API